--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "github-pages",
+  "name": "dev-macb.github.io",
   "version": "0.1.0",
+  "homepage": "https://dev-macb.github.io/github-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,6 +18,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
