--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "dev-macb.github.io",
+    "homepage": "https://dev-macb.github.io",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "build": "tsc -b && vite build",
+        "dist": "gh-pages -d dist",
+        "start": "vite preview"
     },
     "dependencies": {
         "react": "^18.3.1",
@@ -22,6 +24,7 @@
         "eslint": "^9.9.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
+        "gh-pages": "^6.1.1",
         "globals": "^15.9.0",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
