--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-*.tsbuildinfo
-*.lock
+# Diretórios
+/dist
+/build
+/node_modules
 
-node_modules
-dist
-dist-ssr
-*.local
+
+# Arquivos de Logs
+*.log
+*.lock
+*.tsbuildinfo
 
 # Editor directories and files
 .vscode/*
@@ -24,3 +19,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+dist-ssr
+*.local
